<resources>
    <string name="app_name">Frauds Report</string>
    <string name="report_list_title">Report</string>
    <string name="report_list_subtitle">Daftar Nomor Terlapor</string>
    <string name="report_detil">Report Detil</string>
    <string name="post_report">Kirim Laporan</string>
    <string name="edit_report">Ubah Laporan</string>
    <string name="fraud_list">Frauds List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="not_found">Tidak ditemukan</string>
    <string name="delete_success">Berhasil dihapus..</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dilaporkan">Dilaporkan pada tanggal : </string>
    <string name="summary_kasus">Total kasus yang dilaporkan pengguna</string>
    <string name="summary_norek">Rekening bank telah dilaporkan pengguna</string>
    <string name="summary_notelp">Nomor telepon telah dilaporkan pengguna</string>
    <string name="summary_rugi">Total kerugian sampai dengan saat ini</string>
    <string name="summary_new_rugi">Kerugian terbaru yang dilaporkan pengguna</string>
    <string name="title_activity_report_detil">ReportDetilActivity</string>
    <string name="update_fraud_header">Ubah Laporan Penipuan</string>
    <string name="inser_fraud_header">Tambah Laporan Penipuan untuk Nomor\n</string>

    <string name="update">Ubah</string>
    <string name="delete">Hapus</string>

    <!--post form-->
    <string name="submit">Submit</string>
    <string name="top_heading">Laporkan Nomor Penipu Online</string>
    <string name="nomor_rek">Nomor Rekening</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="jenis">Jenis Penipuan</string>
    <string name="kerugian">Jumlah Kerugian</string>
    <string name="kota">Kota/Tempat Tinggal Korban</string>
    <string name="rek">Rekening</string>
    <string name="phone">Telepon</string>
</resources>
