<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.reportlist.ReportListActivity">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_page_normal"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginTop="@dimen/padding_page_normal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black_flat"
                android:textSize="@dimen/size_value"
                android:text="@string/top_heading"/>

            <RadioGroup
                android:id="@+id/rgNumberType"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbRek"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rek" />

                <RadioButton
                    android:id="@+id/rbPhone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />
            </RadioGroup>

            <!--NOmor-->
            <TextView
                android:id="@+id/txtLabelNomor"
                android:layout_marginTop="@dimen/padding_page_small"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_rek"
                android:textColor="@color/red_material"
                style="@style/TextView.InputLabel"
                />
            <EditText
                android:id="@+id/edtNomor"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="@dimen/padding_page_normal"
                android:textSize="16sp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomor_rek" />

            <!--Jenis-->
            <TextView
                android:id="@+id/txtJenis"
                android:layout_marginTop="@dimen/padding_page_normal"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis"
                android:textColor="@color/red_material"
                style="@style/TextView.InputLabel"
                />
            <EditText
                android:id="@+id/edtJenis"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="@dimen/padding_page_normal"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jenis" />

            <!--kerugian-->
            <TextView
                android:id="@+id/txtKerugian"
                android:layout_marginTop="@dimen/padding_page_normal"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kerugian"
                android:textColor="@color/red_material"
                style="@style/TextView.InputLabel"
                />
            <id.web.hangga.frauds.view.customview.MoneyEditText
                android:id="@+id/edtKerugian"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="@dimen/padding_page_normal"
                android:textSize="16sp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kerugian" />

            <!--Kota-->
            <TextView
                android:id="@+id/txtKOta"
                android:layout_marginTop="@dimen/padding_page_normal"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kota"
                android:textColor="@color/red_material"
                style="@style/TextView.InputLabel"
                />
            <EditText
                android:id="@+id/edtKota"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/padding_page_normal"
                android:layout_marginRight="@dimen/padding_page_normal"
                android:layout_marginBottom="@dimen/padding_page_normal"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kota" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="32dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:background="@drawable/selector_button_yellow"
                android:layout_height="46dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>