<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:layout_marginLeft="@dimen/padding_page_normal"
    android:layout_marginRight="@dimen/padding_page_normal"
    android:layout_marginTop="@dimen/padding_page_normal"
    android:layout_marginBottom="@dimen/padding_page_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_flat"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtTotalKasus"
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginTop="@dimen/padding_page_small"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_value"
            tools:text="6767-79987-7878"/>
        <TextView
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginBottom="@dimen/padding_card_inner_inner"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title_item"
            android:text="@string/summary_kasus"/>
        <View
            
            android:layout_marginTop="@dimen/padding_card_inner"
            android:layout_marginBottom="@dimen/padding_card_inner"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_summary"/>
        <TextView
            android:gravity="center"
            android:id="@+id/txtTotalRugi"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginTop="@dimen/padding_page_small"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_value"
            tools:text="6767-79987-7878"/>
        <TextView
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginBottom="@dimen/padding_card_inner_inner"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title_item"
            android:text="@string/summary_rugi"/>
        <View
            
            android:layout_marginTop="@dimen/padding_card_inner"
            android:layout_marginBottom="@dimen/padding_card_inner"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_summary"/>
        <TextView
            android:id="@+id/txtNewRugi"
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginTop="@dimen/padding_page_small"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_value"
            tools:text="6767-79987-7878"/>
        <TextView
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_page_normal"
            android:layout_marginRight="@dimen/padding_page_normal"
            android:layout_marginBottom="@dimen/padding_page_normal"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title_item"
            android:text="@string/summary_new_rugi"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>